--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello World
+
+
+    　　---
+    　　layout: default
+    　　title: Joey Tian's Blog
+    　　---
+
+    　　<h2>{{ page.title }}</h2>
+
+    　　<p>Latest Posts</p>
+
+    　　<ul>
+
+    　　　　{% for post in site.posts %}
+
+    　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+
+    　　　　{% endfor %}
+
+    　　</ul>
